--- a/article/insurance2.html
+++ b/article/insurance2.html
@@ -6,7 +6,7 @@
 
 <br>
 	<center>
-		<img src="https://i.imgur.com/bs3g1AD.jpg" alt="Home Insurance" title="Home Insurance">
+		<img src="https://i.imgur.com/bs3g1AD.jpg" alt="Home Insurance" title="Home Insurance" width="400">
 	</center>
 <br>
 
