--- a/article/insurance4.html
+++ b/article/insurance4.html
@@ -6,7 +6,7 @@
 
 <br>
 	<center>
-		<img src="https://i.imgur.com/tuTT22b.png" alt="Car Insurance" title="Car Insurance">
+		<img src="https://i.imgur.com/tuTT22b.png" alt="Car Insurance" title="Car Insurance"  width="400">
 	</center>
 <br>
 
